--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   "dependencies": {
     "cypress-commands": "^1.1.0",
     "cypress-xpath": "^1.6.1",
-    "normalize-text": "^2.3.1"
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
-    "cypress": "^6.2.1",
+    "@shelex/cypress-allure-plugin": "^2.2.1",
+    "cypress": "^6.3.0",
     "cypress-file-upload": "^4.1.1",
     "cypress-mochawesome-reporter": "^1.3.0",
     "cypress-ntlm-auth": "^3.1.2",
